Add current date

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <body class="container">
     <div class="calendar">
       <div class="calendar_container">
-        <header class="calendar_header">
+        <header id="mouth" class="calendar_header">
           JAN
         </header>
-        <main class="calendar_body">
+        <main id="day" class="calendar_body">
           19
         </main>
       </div>
     </div>
+    <script src="index.js"></script> 
   </body>
 </html>
