--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendary</title>
   </head>
@@ -18,6 +18,6 @@
         </main>
       </div>
     </div>
-    <script src="index.js"></script> 
+    <script src="/index.js"></script>
   </body>
 </html>
